﻿Changes for myForecast 1.1.0
============================
Enhancements
- Replaced Dark Sky ® API with OpenWeather ® API, due to Dark Sky ® API been acquired by Apple and discontinuing the free access.
- Added more weather icons from by d3stroy (https://www.deviantart.com/d3stroy - weezle icon set)

Changes for myForecast 1.0.9
============================
Enhancements
- Removed support for Tls 1.0 and Tls 1.1. When calling Dark Sky ® API only Tls 1.2 will be used.

Changes for myForecast 1.0.8
============================
Enhancements
- Added support for Tsl 1.2 protocol when calling Dark Sky ® API

Changes for myForecast 1.0.7
============================
Enhancements
- Improved the formatting of the value for Probability of Precipitation
- Selected the correct Min/max temperature from the response to match the DarkSky website values
Bugfixes
- Fixed a bug with incorrectly parsing decimals under different regional settings like Dutch (Netherlands),
due to the decimal separator from Dark Sky API response always being a comma, example: 32.34 (thanks to Alex Kelder)

Changes for myForecast 1.0.6
============================
Enhancements
- Replaced WeatherUnderground ® API with Dark Sky ® API, due to WeatherUnderground ® API discontinuing the free access.
- All weather icons are provided by d3stroy (https://www.deviantart.com/d3stroy - weezle icon set)

Changes for myForecast 1.0.5
============================
Enhancements
- Minor updates to the English and French localization.
- Forecast tile captions will now be correctly localized based on the selected language.
Bugfixes
- Fixed the current forecast/hourly forecast icons. Night time forecast will use the night version of the icons.

Changes for myForecast 1.0.4
============================
Bugfixes
- Updated the application layout to render better on 16:10 displays (example: 1680x1050 resolution, thanks to Scallica)

Changes for myForecast 1.0.3
============================
Enhancements